--- a/src/popup.haml
+++ b/src/popup.haml
@@ -1,28 +1,28 @@
 !!! strict
 %html
   %head
-    %title= 'Game of Spoilers'
+    %title= 'Game of Spoils'
     %script{src: "scripts/vendor/livereload.js?host=localhost&port=35729"}
     %script{src: "scripts/vendor/jquery.min.js", type: "text/javascript"}
+    %script{src: "scripts/constants.js",         type: "text/javascript"}
     %script{src: "scripts/popup.js",             type: "text/javascript"}
-    :css
-      body#game-of-spoilers-popup {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-        min-width: 345px;
-        text-align: center;
-        #title {
-          font-weight: bold;
-        }
-        #subtitle {
-          font-size: 12px;
-        }
-      }
+    %script{src: "styles/popup.css",             type: "text/javascript"}
+    %link{rel: "stylesheet", type: "text/css", href: "styles/popup.css"}
+    %link{rel: "stylesheet", type: "text/css", href: "assets/fonts/cinzel-decorative.css"}
   %body#game-of-spoilers-popup
     #title= 'Game of Spoilers'
     #subtitle
-      %span= 'By'
-      %a{href: "http://stublair.co", target: "_blank"}= ' Stu Blair'
+      %span= 'By '
+      %a{href: "http://stublair.co", target: "_blank"}= 'Stu Blair'
     %img#stark-image{src: "assets/images/blind_stark.png"}
+    %div
+    .setting-holder
+      .onoffswitch
+        %input#blocking-enabled-toggle.onoffswitch-checkbox{type: "checkbox", name: "onoffswitch"}
+        %label.onoffswitch-label{for:"blocking-enabled-toggle"}
+          %span.onoffswitch-inner
+          %span.onoffswitch-switch
+      .setting-text= 'Blocking spoilers enabled'
+
     #num-spoilers-prevented
     #lifetime-spoilers-prevented
