--- a/src/styles/popup.sass
+++ b/src/styles/popup.sass
@@ -1,7 +1,7 @@
 body#game-of-spoilers-popup
   font-family: "Cinzel Decorative", "Segoe UI", "Lucida Grande", Tahoma, serif
   font-size: 100%
-  min-width: 345px
+  min-width: 380px
   text-align: center
   background-color: #F3F3F3
   #title
@@ -16,6 +16,7 @@ body#game-of-spoilers-popup
     height: 2em
     line-height: 2.1em
     font-size: 1.08em
+    margin-top: 4px
     .onoffswitch, .setting-text
       float: left
     .setting-text
