Fixed title + made font bigger

--- a/src/popup.haml
+++ b/src/popup.haml
@@ -10,7 +10,7 @@
     %link{rel: "stylesheet", type: "text/css", href: "styles/popup.css"}
     %link{rel: "stylesheet", type: "text/css", href: "assets/fonts/cinzel-decorative.css"}
   %body#game-of-spoilers-popup
-    #title= 'Game of Spoilers'
+    #title= 'Game of Spoils'
     #subtitle
       %span= 'By '
       %a{href: "http://stublair.co", target: "_blank"}= 'Stu Blair'
