--- a/src/popup.haml
+++ b/src/popup.haml
@@ -5,6 +5,7 @@
     %script{src: "scripts/vendor/livereload.js?host=localhost&port=35729"}
     %script{src: "scripts/vendor/jquery.min.js", type: "text/javascript"}
     %script{src: "scripts/constants.js",         type: "text/javascript"}
+    %script{src: "scripts/helpers.js",           type: "text/javascript"}
     %script{src: "scripts/popup.js",             type: "text/javascript"}
     %script{src: "styles/popup.css",             type: "text/javascript"}
     %link{rel: "stylesheet", type: "text/css", href: "styles/popup.css"}
