--- a/src/styles/popup.sass
+++ b/src/styles/popup.sass
@@ -1,4 +1,4 @@
-body#game-of-spoilers-popup
+#game-of-spoilers-popup
   font-family: "Cinzel Decorative", "Segoe UI", "Lucida Grande", Tahoma, serif
   font-size: 100%
   min-width: 380px
