switch to smaller z-index

--- a/src/styles/content.sass
+++ b/src/styles/content.sass
@@ -6,7 +6,7 @@
   left: 0
   top: 0
   padding: 6px 10px 0px 10px
-  z-index: 1000000
+  z-index: 100
   background: black !important
   color: white  !important
   cursor: not-allowed  !important
