Updated styling on author link in popup

--- a/src/styles/popup.sass
+++ b/src/styles/popup.sass
@@ -9,6 +9,17 @@
     font-weight: bold
   #subtitle
     font-size: 17px
+    a
+      outline: none
+      color: #071FE0
+      font-weight: bold
+      text-decoration: none
+      &:hover
+        color: #CE1414
+        border-bottom: 1px solid #CE1414
+      &:active
+        color: black
+        border-bottom-color: black
   #stark-image
     height: 98px
 
