Added support for feedly.com

--- a/src/styles/content.sass
+++ b/src/styles/content.sass
@@ -85,3 +85,11 @@ article.item
 
 .glamoured
   position: relative
+
+
+// Feedly specific
+.u0Entry.glamoured
+  .spoiler-glamour
+    padding: 4px
+    .spoiler-obituary
+      vertical-align: top
