--- a/src/styles/content.sass
+++ b/src/styles/content.sass
@@ -93,3 +93,14 @@ article.item
     padding: 4px
     .spoiler-obituary
       vertical-align: top
+
+
+// Facebook and Twitter specific
+#pagelet_trending_tags_and_topics ul > li, .trend-item
+  .spoiler-glamour
+    width: 95%
+    padding: 3px 6px 1px 6px
+  .spoiler-glamour h3, .click-to-view-spoiler
+    font-size: 11px !important
+    line-height: 11px !important
+    margin-top: 4px !important
