Added Youtube support

--- a/src/styles/content.sass
+++ b/src/styles/content.sass
@@ -96,7 +96,7 @@ article.item
 
 
 // Facebook and Twitter specific
-#pagelet_trending_tags_and_topics ul > li, .trend-item
+#pagelet_trending_tags_and_topics ul > li, .trend-item, .comment-renderer-text
   .spoiler-glamour
     width: 95%
     padding: 3px 6px 1px 6px
