Fix padding of black box being wider than spoiler element

--- a/src/styles/content.sass
+++ b/src/styles/content.sass
@@ -6,6 +6,7 @@
   left: 0
   top: 0
   padding: 6px 10px 0px 10px
+  box-sizing: content-box
   z-index: 100
   background: black !important
   color: white  !important
